--- a/CSS/API.css
+++ b/CSS/API.css
@@ -1,6 +1,32 @@
 body {
-  background-color: whites;
-  background-image: url("../Images/marioWallpaper.png");
+    background-color: whites;
+    background-image: url("../Images/marioWallpaper.png");
+  }
+
+.searchForm{
+  /* background-image: url(./Images/question.png);
+  background-size: 15% 55%;
+  background-repeat: no-repeat;*/
+  background-color: #fbd000;
+  border-right: 5px solid #ffde24;
+  border-left: 5px solid #ffde24;
+  border-bottom: 5px solid #a78e00;
+  border-top: 5px solid #ffea72;
+  border-radius: 3px;
+  position: relative;
+  width: 80%;
+  height: 30%;
+  margin-left: 10%;
+  margin-bottom: 10px;
+}
+
+.checkboxes{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 20px;
 }
 
 .input-group {
@@ -8,49 +34,100 @@ body {
   margin-bottom: 10px;
   width: 60%;
   margin-left: 20%;
+  padding: 10px;
 }
-
-.search-btn {
-  background-color: #fbd000;
-}
-
-.clear-btn {
-  background-color: aqua;
-}
-
-#tableContainer {
+  
+.btn:hover{
   background-color: #ff3f56;
-  border: 4px solid red;
-  width: 95%;
-  margin-left: 2.5%;
 }
 
-table {
-  border-collapse: collapse;
-  border-radius: 0.375rem;
-}
+  .search-btn {
+    background-color: #fbd000;
+    color: black;
+  }
+  
+  .clear-btn {
+    background-color: aqua;
+  }
+  
+  #emptyTable {
+    background-color: #ff3f56;
+    border: 4px solid red;
+    width: 95%;
+    margin-left: 2.5%;
+  }
+  
+  table {
+    border-collapse: collapse;
+    border-radius: 0.375rem;
+  }
+  
+  .columStyle {
+    padding: 0.5rem 0.5rem;
+  }
+  
+  #countStyle {
+    font-weight: bold;
+  }
+  
+  tr.rows:hover {
+    background-color: red;
+    cursor: pointer;
+  }
 
-.columStyle {
-  padding: 0.5rem 0.5rem;
-}
+  #LakituDiv{
+    background-color: #fbd000;
+    border-right: 5px solid #ffde24;
+    border-left: 5px solid #ffde24;
+    border-bottom: 5px solid #a78e00;
+    border-top: 5px solid #ffea72;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    height: 40%;
+    margin-left: 35%;
+    position: relative;
+  }
 
-#countStyle {
-  font-weight: bold;
-}
-
-tr.rows:hover {
-  background-color: red;
-  cursor: pointer;
-}
-
-.secretBox {
-  height: 100px;
-  padding: 0.5rem 0.5rem;
-  background-color: yellow;
-  display: none;
-}
-/*
-.showDetail {
-  display: "block";
-}
-*/
+  .coin-box-rivet1 {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: #a78e00;
+    left: 0;
+    top: 0;
+  }
+  
+  .coin-box-rivet2 {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: #a78e00;
+    right: 0;
+    top: 0;
+  }
+  .coin-box-rivet3 {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: #a78e00;
+    left: 0;
+    bottom: 0;
+  }
+  .coin-box-rivet4 {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: #a78e00;
+    bottom: 0;
+    right: 0;
+  }
