--- a/CSS/API.css
+++ b/CSS/API.css
@@ -21,13 +21,17 @@ body {
   margin-bottom: 10px;
 }
 
+.title-show-drivers{
+  margin-top: 20px;
+}
+
 .checkboxes{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 15px;
-  margin-top: 30px;
+  margin-top: 10px;
   border: 3px solid #a78e00;
   border-radius: 3px;
   height: 50px;
@@ -153,4 +157,10 @@ body {
 .imageSkill{
   width: 70px;
   height: 70px;
+}
+
+.footer-container{
+  background-color: white;
+  width: 100%;
+  height: 100px;
 }
