--- a/CSS/Images.css
+++ b/CSS/Images.css
@@ -2,3 +2,22 @@ body {
   background-image: url("../Images/marioWallpaper.png");
   background-color: whites;
 }
+
+.welcomePeach{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.push{
+  width: 30%;
+  max-height: 500px;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 100px;
+}
+
+.fix{
+  width: 70%;
+  height: 100%;
+}
