--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@ body {
   background-color: whites;
 }
 
+/* PICTURES ---------------------------------------------------------------------------- */
 .carousel-control-prev-icon {
   background-color: #a9afb0;
 }
@@ -17,6 +18,7 @@ body {
   height: 80%;
 }
 
+/* WELCOME SENTENCE ---------------------------------------------------------------------------- */
 #welcome-sent {
   margin-top: 20px;
   font-weight: bolder;
@@ -24,8 +26,9 @@ body {
   font-size: 30px;
 }
 
+/* SHOW BUTTON ---------------------------------------------------------------------------- */
 #welcomeButton {
-  background-color: red;
+  background-color: #fbd000;
   width: 70%;
   height: auto;
   padding: 10px;
@@ -36,6 +39,7 @@ body {
   box-shadow: 3px 3px gray;
 }
 
+/* INVISIBLE TEXT ---------------------------------------------------------------------------- */
 .WelcomeText {
   background-color: #fbd000;
   border-right: 5px solid #ffde24;
@@ -93,6 +97,45 @@ body {
   right: 0;
 }
 
-.boxText {
+#boxText {
   padding: 25px;
+  margin: 0;
+}
+
+/* FOOTER ---------------------------------------------------------------------------- */
+
+.footer-container{
+  background-color: white;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.icons{
+  display: flex;
+  gap: 10px;
+  font-size: 35px;
+  color: red;
+}
+
+/* MEDIA QUERY ---------------------------------------------------------------------------- */
+
+@media screen and (max-width: 412px){
+
+/* WELCOME PICS ---------------------------------------------------------------------------- */
+#carouselExampleIndicators {
+  margin-left: 5%;
+  width: 90%;
+}
+
+/* INVISIBLE TEXT ---------------------------------------------------------------------------- */
+.WelcomeText {
+  margin-left: 10%;
+  width: 80%;
+}
+
 }
